k3s/jackett/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
  labels:
    app: jackett
spec:
  type: ClusterIP
  selector:
    app: jackett
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9117
