k3s/jackett/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: mediamaven
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /jackett
        pathType: Prefix
        backend:
          service:
            name: jackett-service
            port:
              number: 9117
